Fix overflow

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     color: #bcbbbb;
     font-size: 15px;
     padding: 3px;
-    overflow-y: scroll;
     position: absolute;
     top: 0;
     right: 0;
